@@ -1,5 +1,13 @@
 2008-09-13  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	* Makefile.am: Add the project name
+	and version suffix to the JDK version number.
+	* acinclude.m4: Add support for --with-version
+	and add a Makefile variable, PROJECT_NAME.
+	* configure.ac: Enable --with-version.
+
+2008-09-13  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	* Makefile.am:
 	Patch the OpenJDK build with the version
 	of IcedTea being used. Use $(HG) instead of 'hg'.
